tests/errors/union_undefined_member.dang
type Cat {
  name: String!
}

union Pet = Cat | Unicorn
